<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/postingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/postingView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
        
        <Button
            android:id="@+id/lostPets"
            android:layout_width="90dp"
            android:layout_height="wrap_content"            
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/postingTextView"
            android:background="@drawable/buttonshape"
            android:height="45dp"
            android:maxHeight="60dp"
            android:maxWidth="90dp"
            android:text="@string/lostpets"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/foundPets"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postingTextView"
            android:layout_above="@+id/list"
            android:layout_toRightOf="@+id/lostPets"            
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/buttonshape"
            android:height="45dp"
            android:maxHeight="60dp"
            android:maxWidth="90dp"
            android:text="@string/foundpets"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:textStyle="bold" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lostPets" >

        </ListView>

    </RelativeLayout>